Remove overflow: hidden; to fix tinyMCE on mobile

--- a/htdocs/styles/css/minimal/screen/content_minimal.css
+++ b/htdocs/styles/css/minimal/screen/content_minimal.css
@@ -382,7 +382,8 @@ dl.list {
    * @section content-forms
    */
 
-  form {overflow:hidden;}
+  form {}
+
   fieldset {
     border: 1px solid #ccc;
     padding: 2em;
